# finp2p-tezos-adapter

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  dune-project  ownera.opam
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  test-ts-lib.yml
configs/: testnet-config.json
contracts/: admin.ml  assets.ml  auth_params.ml  auth_types.ml  authorization.ml  dune  errors.ml  fa2.ml  fa2_common.ml  fa2_params.ml  fa2_sig.ml  fa2_test.ml  fa2_types.ml  finp2p_conv.ml  finp2p_conv_maps.ml  finp2p_lib.ml  finp2p_proxy.ml  finp2p_proxy_types.ml  manager.ml  n_ft_multiple.ml  n_ft_multiple_test.ml  n_ft_token.ml  types.ml  utils.ml
contracts/for_tests/: Readme.md  admin.ml  assets.ml  dune  fa2.ml  fa2_common.ml  fa2_params.ml  fa2_types.ml  manager.ml
contracts/scripts/: gen_finp2p_conv.ml
scripts/: redeploy.sh
server/: .eslintrc.json  .prettierignore  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/helpers/: config.ts  logger.ts  middleware.ts
server/src/routes/: index.ts  resources.ts  tokens.ts
server/src/services/: model.ts  tokens.ts
server/src/validators/: resources.ts  tokens.ts  utils.ts
specs/: cost_analysis.md  cost_anaysis.md  design.md  design_document.md  hold.md  plan.md
tezos-lib/: finp2p_proxy.ts  package-lock.json  package.json  taquito_wrapper.ts  tsconfig.json
tezos-lib/tests/: redeploy_contracts.ts  sandbox.ts  test_escrow.ts  test_fa2.ts  test_finp2p_proxy.ts  test_hold.ts  test_init.ts  test_lib.ts  test_variables.ts  tests.ts  tsconfig.json
