(library
 (name base)
 (modules errors fa2_params auth_params fa2_types auth_types finp2p_proxy_types)
 (preprocess
  (pps mligo.ppx))
 (flags
  (:standard -open Mligo)))

(library
 (name fa2)
 (modules assets admin manager fa2)
 (libraries base)
 (preprocess
  (pps mligo.ppx))
 (flags
  (:standard -open Mligo -open Base)))

(library
 (name fa2_sig)
 (modules fa2_sig)
 (libraries base)
 (preprocess
  (pps mligo.ppx))
 (flags
  (:standard -open Mligo -open Base)))

(library
 (name authorization)
 (modules authorization)
 (libraries base)
 (preprocess
  (pps mligo.ppx))
 (flags
  (:standard -open Mligo -open Base)))

(library
 (name finp2p_proxy)
 (modules finp2p_conv_maps finp2p_lib finp2p_proxy)
 (libraries base fa2_sig)
 (preprocess
  (pps mligo.ppx))
 (flags
  (:standard -open Mligo -open Base)))

(library
 (name fa2_test)
 (modules fa2_test)
 (libraries fa2)
 (preprocess
  (pps mligo.ppx)))

(rule
 (mode promote)
 (deps scripts/gen_finp2p_conv.ml)
 (target finp2p_conv.ml)
 (action
  (with-stdout-to
   %{target}
  (run ./scripts/gen_finp2p_conv.ml))))

(rule
 (alias ligo)
 (deps (glob_files *.ml))
 (targets
  errors.mligo
  fa2_params.mligo
  fa2_types.mligo
  fa2_sig.mligo
  assets.mligo
  admin.mligo
  manager.mligo
  fa2.mligo
  fa2_test.mligo
  auth_params.mligo
  auth_types.mligo
  authorization.mligo
  finp2p_proxy_types.mligo
  finp2p_conv_maps.mligo
  finp2p_lib.mligo
  finp2p_proxy.mligo)
 (action
  (progn
   (run to_mligo fa2.ml)
   (run to_mligo authorization.ml)
   (run to_mligo finp2p_proxy.ml)
   (run to_mligo fa2_test.ml))))

(rule
 (alias michelson)
 (deps
   errors.mligo
   fa2_params.mligo
   fa2_types.mligo
   fa2_sig.ml
   assets.mligo
   admin.mligo
   manager.mligo
   fa2.mligo
   fa2_test.mligo
   auth_params.mligo
   auth_types.mligo
   authorization.mligo
   finp2p_proxy_types.mligo
   finp2p_conv_maps.mligo
   finp2p_lib.mligo
   finp2p_proxy.mligo)
(targets fa2.tz authorization.tz finp2p_proxy.tz)
(action
 (progn
  (with-stdout-to
    fa2.tz
   (run ligo compile contract fa2.mligo -p hangzhou))
  (with-stdout-to
    authorization.tz
   (run ligo compile contract authorization.mligo -p hangzhou))
  (with-stdout-to
    finp2p_proxy.tz
   (run ligo compile contract finp2p_proxy.mligo -p hangzhou)))))

(rule
 (alias michelson-json)
 (deps
   errors.mligo
   fa2_params.mligo
   fa2_types.mligo
   fa2_sig.ml
   assets.mligo
   admin.mligo
   manager.mligo
   fa2.mligo
   fa2_test.mligo
   auth_params.mligo
   auth_types.mligo
   authorization.mligo
   finp2p_proxy_types.mligo
   finp2p_conv_maps.mligo
   finp2p_lib.mligo
   finp2p_proxy.mligo)
(targets fa2.json authorization.json auth_init.json finp2p_proxy.json)
(action
 (progn
  (with-stdout-to
    fa2.json
   (run ligo compile contract fa2.mligo --michelson-format json -p hangzhou))
  (with-stdout-to
    authorization.json
   (run ligo compile contract authorization.mligo --michelson-format json -p hangzhou))
  (with-stdout-to
    auth_init.json
   (run ligo compile contract authorization.mligo -e auth_authorize --michelson-format json -p hangzhou))
  (with-stdout-to
    finp2p_proxy.json
   (run ligo compile contract finp2p_proxy.mligo --michelson-format json -p hangzhou)))))
